# cupcast

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: PLAN.md
docs/final/: README.md
docs/results/: README.md
docs/v1/: README.md
docs/v2/: design.md
outputs/: README.md  bracket_results.md  executive_summary.md  knockout_bracket_forecast.csv  knockout_bracket_forecast.md  market_comparison.csv  market_comparison.md  match_predictions.md  match_predictions_groups.csv  match_predictions_knockouts.csv  r32_match_predictions.md  sensitivity.md  simulation_results.csv  top3_forecast.md  validation.md
outputs/v1/: README.md
src/cupcast/: run.py
tests/: test_api_football.py  test_backtest.py  test_compare_wc2026.py  test_dixon_coles.py  test_elo.py  test_expected_minutes.py  test_fetch_all.py  test_goalkeepers.py  test_matches.py  test_metrics.py  test_report_tables.py  test_sensitivity.py  test_shrinkage.py  test_sim.py  test_smoke.py  test_understat.py  test_v2_namespace.py
tests/v2/: test_baseline.py  test_catalog.py  test_composite.py  test_context_adjust.py  test_context_covariates.py  test_context_shadow.py  test_dc_static.py  test_dynamic.py  test_endpoints.py  test_espn.py  test_expected_minutes_v2.py  test_fetch_client.py  test_fit_predict.py  test_gate.py  test_league_strength.py  test_live_bracket.py  test_matches_v2.py  test_model_matches.py  test_model_validate.py  test_player_quality.py  test_prior.py  test_pull.py  test_reconcile.py  test_report.py  test_report_clubform.py  test_shootout.py  test_sim_bracket.py  (+6 more)
(+125 files in other folders)
