[project]
name = "cupcast"
version = "0.1.0"
description = "Monte Carlo forecasting engine for the 2026 FIFA World Cup"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.14",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "truststore>=0.10.4",
    "soccerdata>=1.9.0",
    "tabulate>=0.10.0",
    "numpyro>=0.21.0",
    "penaltyblog>=1.11.0",
    "optuna>=4.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cupcast"]

# Pin the public index so machine-level uv config (private mirrors) can never
# leak into the committed lockfile.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
